# FFmpegStatic

./: .gitignore  CMakeLists.txt  FFmpeg.h  FFmpeg.h.in  FFmpeg.ver  README.md  build-msys2.sh  build.sh  buildFFmpegStatic.sh  download.sh  easy.cpp  frei0r.sh  list.txt  stub.c  stub.cpp  xcode.sh
deprecated/: build-linux.sh  build-macos.sh  build-msys2.sh
